--- a/presentation/src/main/res/layout/activity_main_page.xml
+++ b/presentation/src/main/res/layout/activity_main_page.xml
@@ -110,6 +110,34 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.9487" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_fbtn_main_page_floating_button_t"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.7370" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_fbtn_main_page_floating_button_b"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.9502" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_fbtn_main_page_floating_button_s"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.7744" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_fbtn_main_page_floating_button_e"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.9282" />
+
         <TextView
             android:id="@+id/tv_entire"
             android:layout_width="0dp"
@@ -181,6 +209,35 @@
             app:layout_constraintEnd_toEndOf="@id/g_btn_search_e"
             app:layout_constraintStart_toStartOf="@id/g_btn_search_s"
             app:layout_constraintTop_toTopOf="@id/g_tab_bar_t" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fbtn_main_page_floating_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_floatingbutton"
+            android:backgroundTint="@color/primary"
+            android:src="@drawable/src_add"
+            app:borderWidth="0dp"
+            app:fabSize="auto"
+            app:layout_constraintBottom_toBottomOf="@id/g_fbtn_main_page_floating_button_b"
+            app:layout_constraintEnd_toEndOf="@id/g_fbtn_main_page_floating_button_e"
+            app:layout_constraintStart_toStartOf="@id/g_fbtn_main_page_floating_button_s"
+            app:layout_constraintTop_toTopOf="@id/g_fbtn_main_page_floating_button_t"
+            app:rippleColor="@color/primary" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fbtn_write_post"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="42dp"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/bg_write_post"
+            android:backgroundTint="@color/primary"
+            android:src="@drawable/src_write_post"
+            app:borderWidth="0dp"
+            app:fabSize="mini"
+            app:layout_constraintBottom_toTopOf="@id/fbtn_main_page_floating_button"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fcv_main_entire_fragment_container"
