--- a/presentation/src/main/res/layout/activity_main_page.xml
+++ b/presentation/src/main/res/layout/activity_main_page.xml
@@ -111,20 +111,6 @@
             app:layout_constraintGuide_percent="0.9487" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_fbtn_main_page_floating_button_t"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.7370" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_fbtn_main_page_floating_button_b"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.9502" />
-
-        <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_fbtn_main_page_floating_button_s"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
@@ -137,6 +123,20 @@
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.9282" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_fbtn_write_post_floating_button_s"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.8000" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_fbtn_write_post_floating_button_e"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.9026" />
 
         <TextView
             android:id="@+id/tv_entire"
@@ -214,30 +214,30 @@
             android:id="@+id/fbtn_main_page_floating_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="42dp"
             android:background="@drawable/bg_floatingbutton"
             android:backgroundTint="@color/primary"
             android:src="@drawable/src_add"
             app:borderWidth="0dp"
             app:fabSize="auto"
-            app:layout_constraintBottom_toBottomOf="@id/g_fbtn_main_page_floating_button_b"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/g_fbtn_main_page_floating_button_e"
             app:layout_constraintStart_toStartOf="@id/g_fbtn_main_page_floating_button_s"
-            app:layout_constraintTop_toTopOf="@id/g_fbtn_main_page_floating_button_t"
             app:rippleColor="@color/primary" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fbtn_write_post"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="42dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/bg_write_post"
             android:backgroundTint="@color/primary"
             android:src="@drawable/src_write_post"
             app:borderWidth="0dp"
             app:fabSize="mini"
             app:layout_constraintBottom_toTopOf="@id/fbtn_main_page_floating_button"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="@id/g_fbtn_write_post_floating_button_e"
+            app:layout_constraintStart_toStartOf="@id/g_fbtn_write_post_floating_button_s" />
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fcv_main_entire_fragment_container"
