--- a/presentation/src/main/res/layout/activity_main_page.xml
+++ b/presentation/src/main/res/layout/activity_main_page.xml
@@ -138,6 +138,20 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.9026" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_tv_write_post_bubble_s"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5590" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:id="@+id/g_tv_write_post_bubble_e"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.7897"
+            />
         <TextView
             android:id="@+id/tv_entire"
             android:layout_width="0dp"
@@ -210,6 +224,23 @@
             app:layout_constraintStart_toStartOf="@id/g_btn_search_s"
             app:layout_constraintTop_toTopOf="@id/g_tab_bar_t" />
 
+        <TextView
+            android:id="@+id/v_write_post_bubble"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="8dp"
+            android:paddingTop="2dp"
+            android:paddingStart="10dp"
+            android:textSize="14sp"
+            android:layout_marginBottom="129dp"
+            android:background="@drawable/bg_write_post_bubble"
+            android:fontFamily="@font/pretendard_regular"
+            android:text="일반글 작성"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/g_tv_write_post_bubble_s"
+            app:layout_constraintEnd_toEndOf="@id/g_tv_write_post_bubble_e"/>
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fbtn_main_page_floating_button"
             android:layout_width="wrap_content"
@@ -217,9 +248,9 @@
             android:layout_marginBottom="42dp"
             android:background="@drawable/bg_floatingbutton"
             android:backgroundTint="@color/primary"
-            android:src="@drawable/src_add"
+            android:src="@drawable/ic_add"
             app:borderWidth="0dp"
-            app:fabSize="auto"
+            app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/g_fbtn_main_page_floating_button_e"
             app:layout_constraintStart_toStartOf="@id/g_fbtn_main_page_floating_button_s"
