--- a/presentation/src/main/res/layout/activity_main_page.xml
+++ b/presentation/src/main/res/layout/activity_main_page.xml
@@ -146,12 +146,12 @@
             app:layout_constraintGuide_percent="0.5590" />
 
         <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_tv_write_post_bubble_e"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:id="@+id/g_tv_write_post_bubble_e"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.7897"
-            />
+            app:layout_constraintGuide_percent="0.7897" />
+
         <TextView
             android:id="@+id/tv_entire"
             android:layout_width="0dp"
@@ -228,18 +228,18 @@
             android:id="@+id/v_write_post_bubble"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:elevation="8dp"
-            android:paddingTop="2dp"
-            android:paddingStart="10dp"
-            android:textSize="14sp"
             android:layout_marginBottom="129dp"
             android:background="@drawable/bg_write_post_bubble"
+            android:elevation="8dp"
             android:fontFamily="@font/pretendard_regular"
+            android:paddingStart="10dp"
+            android:paddingTop="2dp"
             android:text="일반글 작성"
             android:textColor="@color/white"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/g_tv_write_post_bubble_s"
-            app:layout_constraintEnd_toEndOf="@id/g_tv_write_post_bubble_e"/>
+            app:layout_constraintEnd_toEndOf="@id/g_tv_write_post_bubble_e"
+            app:layout_constraintStart_toStartOf="@id/g_tv_write_post_bubble_s" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fbtn_main_page_floating_button"
@@ -255,6 +255,20 @@
             app:layout_constraintEnd_toEndOf="@id/g_fbtn_main_page_floating_button_e"
             app:layout_constraintStart_toStartOf="@id/g_fbtn_main_page_floating_button_s"
             app:rippleColor="@color/primary" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fbtn_write_notice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_floatingbutton"
+            android:backgroundTint="@color/primary"
+            android:src="@drawable/ic_notice"
+            android:layout_marginBottom="12dp"
+            app:borderWidth="0dp"
+            app:fabSize="mini"
+            app:layout_constraintBottom_toTopOf="@id/fbtn_write_post"
+            app:layout_constraintEnd_toEndOf="@id/g_fbtn_write_post_floating_button_e"
+            app:layout_constraintStart_toStartOf="@id/g_fbtn_write_post_floating_button_s" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fbtn_write_post"
