--- a/presentation/src/main/res/layout/activity_write_page.xml
+++ b/presentation/src/main/res/layout/activity_write_page.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -11,9 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/sign_up_container"
+            android:id="@+id/write_container"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -22,8 +20,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:defaultNavHost="true"
-            app:navGraph="@navigation/sign_up_graph" />
+            app:navGraph="@navigation/write_graph" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
-
