--- a/presentation/src/main/res/layout/fragment_write_page.xml
+++ b/presentation/src/main/res/layout/fragment_write_page.xml
@@ -88,124 +88,53 @@
             app:layout_constraintGuide_percent="0.0194" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_btn_next_button_s"
+            android:id="@+id/g_btn_write_button_s"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.7854" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_btn_next_button_e"
+            android:id="@+id/g_btn_write_button_e"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.9379" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_btn_next_button_b"
+            android:id="@+id/g_btn_write_button_b"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.072" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_tv_what_category_t"
+            android:id="@+id/g_et_input_title_t"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.1232" />
+            app:layout_constraintGuide_percent="0.109"/>
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_tv_what_category_s"
+            android:id="@+id/g_et_new_write_s"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.0615" />
+            app:layout_constraintGuide_percent="0.0513"/>
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_tv_what_category_e"
+            android:id="@+id/g_et_new_write_e"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.54" />
+            app:layout_constraintGuide_percent="0.9487"/>
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_tv_what_category_b"
+            android:id="@+id/g_et_input_content_b"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.1676" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_tv_select_category_b"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.1969" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_tv_select_category_e"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.4523" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_ibtn_category_idea_button_t"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.2299" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_ibtn_category_idea_button_s"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.0615" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_ibtn_category_idea_button_e"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.9385" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_ibtn_category_idea_button_b"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.4194" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_ibtn_category_feedback_button_t"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.4431" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_ibtn_category_feedback_button_b"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.6327" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_ibtn_jobopening_button_t"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.6564" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_ibtn_jobopening_button_b"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.846" />
-
+            app:layout_constraintGuide_percent="0.59"/>
 
         <ImageButton
             android:id="@+id/ibtn_back_button"
@@ -232,7 +161,6 @@
             app:layout_constraintEnd_toEndOf="@id/g_tv_back_e" />
 
         <TextView
-            android:id="@+id/tv_new_write"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:text="@string/new_write"
@@ -249,67 +177,58 @@
             android:id="@+id/btn_next_button"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/bg_next"
-            app:layout_constraintStart_toStartOf="@id/g_btn_next_button_s"
-            app:layout_constraintEnd_toEndOf="@id/g_btn_next_button_e"
+            android:background="@drawable/bg_write_btn"
+            app:layout_constraintStart_toStartOf="@id/g_btn_write_button_s"
+            app:layout_constraintEnd_toEndOf="@id/g_btn_write_button_e"
             app:layout_constraintTop_toTopOf="@id/g_btn_write_button_t"
-            app:layout_constraintBottom_toBottomOf="@id/g_btn_next_button_b" />
+            app:layout_constraintBottom_toBottomOf="@id/g_btn_write_button_b" />
+        
 
-        <TextView
-            android:id="@+id/tv_what_write"
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:text="@string/what_category"
-            android:textSize="22sp"
-            android:fontFamily="@font/pretendard_bold"
-            android:textColor="@color/black"
-            android:gravity="center_vertical"
-            app:layout_constraintStart_toStartOf="@id/g_tv_what_category_s"
-            app:layout_constraintEnd_toEndOf="@id/g_tv_what_category_e"
-            app:layout_constraintTop_toTopOf="@id/g_tv_what_category_t"
-            app:layout_constraintBottom_toBottomOf="@id/g_tv_what_category_b" />
+            android:orientation="vertical"
+            app:layout_constraintStart_toStartOf="@id/g_et_new_write_s"
+            app:layout_constraintEnd_toEndOf="@id/g_et_new_write_e"
+            app:layout_constraintTop_toTopOf="@id/g_et_input_title_t"
+            app:layout_constraintBottom_toBottomOf="@id/g_et_input_content_b">
 
-        <TextView
-            android:id="@+id/tv_select_category"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:text="@string/select_category"
-            android:textSize="14sp"
-            android:gravity="center_vertical"
-            app:layout_constraintStart_toStartOf="@id/g_tv_what_category_s"
-            app:layout_constraintEnd_toEndOf="@id/g_tv_select_category_e"
-            app:layout_constraintTop_toBottomOf="@id/g_tv_what_category_b"
-            app:layout_constraintBottom_toBottomOf="@id/g_tv_select_category_b" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/write_title"
+                android:textColorHint="@color/gray"
+                android:background="@drawable/bg_title_edittext" />
 
-        <Button
-            android:id="@+id/btn_idea_button"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/bg_idea_false_btn"
-            app:layout_constraintStart_toStartOf="@id/g_ibtn_category_idea_button_s"
-            app:layout_constraintTop_toTopOf="@id/g_ibtn_category_idea_button_t"
-            app:layout_constraintBottom_toBottomOf="@id/g_ibtn_category_idea_button_b"
-            app:layout_constraintEnd_toEndOf="@id/g_ibtn_category_idea_button_e" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:background="@color/input_background"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColorHint="@color/gray">
 
-        <Button
-            android:id="@+id/btn_feedback_button"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/bg_feedback_false_btn"
-            app:layout_constraintStart_toStartOf="@id/g_ibtn_category_idea_button_s"
-            app:layout_constraintEnd_toEndOf="@id/g_ibtn_category_idea_button_e"
-            app:layout_constraintTop_toTopOf="@id/g_ibtn_category_feedback_button_t"
-            app:layout_constraintBottom_toBottomOf="@id/g_ibtn_category_feedback_button_b" />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/input_background"
+                    android:hint="@string/write_content"
+                    android:textColorHint="@color/gray"/>
 
-        <Button
-            android:id="@+id/btn_jobopening_button"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/bg_jobopening_false_btn"
-            app:layout_constraintStart_toStartOf="@id/g_ibtn_category_idea_button_s"
-            app:layout_constraintEnd_toEndOf="@id/g_ibtn_category_idea_button_e"
-            app:layout_constraintTop_toTopOf="@id/g_ibtn_jobopening_button_t"
-            app:layout_constraintBottom_toBottomOf="@id/g_ibtn_jobopening_button_b" />
+            </com.google.android.material.textfield.TextInputLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/input_background"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/number_of_characters"
+                android:background="@drawable/bg_content_textview"
+                android:gravity="right"
+                android:textColor="@color/gray"
+                android:fontFamily="@font/pretendard_medium" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
