--- a/presentation/src/main/res/layout/item_post.xml
+++ b/presentation/src/main/res/layout/item_post.xml
@@ -8,6 +8,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/post_item_layout"
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:background="@drawable/bg_item_post">
