--- a/presentation/src/main/res/layout/activity_main_page.xml
+++ b/presentation/src/main/res/layout/activity_main_page.xml
@@ -8,6 +8,7 @@
     </data>
 
     <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/main_page_drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -315,5 +316,12 @@
                 tools:layout="@layout/fragment_main_entire" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nv_main_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:menu="@menu/menu_main_navi_drawer"
+            />
     </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
