--- a/presentation/src/main/res/layout/navi_main_navigation_header.xml
+++ b/presentation/src/main/res/layout/navi_main_navigation_header.xml
@@ -89,6 +89,35 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.1280" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_iv_go_profile_button_s"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.9111" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_iv_go_profile_button_e"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.9407" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_iv_go_profile_button_t"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.0995" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_iv_go_profile_button_b"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.1161" />
+
+
     <ImageView
         android:id="@+id/iv_navi_header_profile_image"
         android:layout_width="0dp"
@@ -120,4 +149,13 @@
         app:layout_constraintEnd_toEndOf="@id/g_tv_navi_header_email_e"
         app:layout_constraintStart_toStartOf="@id/g_tv_navi_header_email_s"
         app:layout_constraintTop_toTopOf="@id/g_tv_navi_header_email_t" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_go_profile_btn"
+        app:layout_constraintBottom_toBottomOf="@id/g_iv_go_profile_button_b"
+        app:layout_constraintEnd_toEndOf="@id/g_iv_go_profile_button_e"
+        app:layout_constraintStart_toStartOf="@id/g_iv_go_profile_button_s"
+        app:layout_constraintTop_toTopOf="@id/g_iv_go_profile_button_t" />
 </androidx.constraintlayout.widget.ConstraintLayout>
